<resources>
    <string name="app_name">SGJobMarket</string>

    <!-- Shared Preferences -->
    <string name="preference_file_key">AppPreferences</string>

    <!-- Bottom Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_jobs">Jobs</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_listings">Listings</string>
    <string name="nav_agents">Agents</string>
    <string name="nav_agencies">Agencies</string>
    <string name="nav_users">Users</string>

    <!-- Top App Bar -->
    <string name="app_bar_profile_apply_agency">Apply for agency</string>
    <string name="app_bar_change_password">Change password</string>
    <string name="app_bar_profile_logout">Logout</string>
    <string name="app_bar_user_delete">Delete user</string>
    <string name="app_bar_listings_delete">Delete listing</string>
    <string name="app_bar_applications_manage">Manage applications</string>
    <string name="app_bar_applicant_whatsapp">Whatsapp applicant</string>
    <string name="app_bar_applicant_email">Email applicant</string>

    <!-- Menu Title -->
    <string name="title_menu_otp">OTP</string>
    <string name="title_menu_forgot_password">Forgot Password</string>
    <string name="title_menu_reset_password">Reset Password</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_profile">My Profile</string>
    <string name="title_menu_profile_edit">Edit Profile</string>
    <string name="title_menu_change_password">Change Password</string>
    <string name="title_menu_agent_edit">Edit Agent</string>
    <string name="title_menu_agency_edit">Edit Agency</string>
    <string name="title_menu_agency_application">Agency Application</string>
    <string name="title_menu_favourite_jobs">Favourite Jobs</string>
    <string name="title_menu_job_applications">Job Applications</string>
    <string name="title_menu_jobs">My Jobs</string>
    <string name="title_menu_listings">Listings</string>
    <string name="title_menu_manage_applications">Manage Applications</string>
    <string name="title_menu_manage_agency">Manage Agency</string>
    <string name="title_menu_edit_listing">Edit Listing</string>
    <string name="title_menu_create_listing">Create Listing</string>
    <string name="title_menu_applicant_details">Applicant Details</string>
    <string name="title_menu_agents">Agents</string>
    <string name="title_menu_users">Users</string>
    <string name="title_menu_agencies">Agencies</string>


    <!-- Dialog -->
    <string name="dialog_loading_desc">Please wait…</string>

    <!-- Onboarding Fragment-->
    <string name="onboarding_fragment_next">Next</string>
    <string name="onboarding_fragment_get_started">Get Started</string>
    <!-- First Onboarding Fragment -->
    <string name="onboarding_fragment_header_1">Find your Dream Job</string>
    <string name="onboarding_fragment_description_1">Browse a wide range of job listings tailored to your skills and interests</string>

    <!-- Second Onboarding Fragment -->
    <string name="onboarding_fragment_header_2">Get Personalized Notifications</string>
    <string name="onboarding_fragment_description_2">Receive updates when your job application is accepted</string>

    <!-- Third Onboarding Fragment -->
    <string name="onboarding_fragment_header_3">Receive Instant Payments</string>
    <string name="onboarding_fragment_description_3">Next day payment, no delays</string>

    <!-- Form hints -->
    <string name="hint_email">Email*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_new_password">New Password*</string>
    <string name="hint_confirm_password">Confirm Password*</string>
    <string name="hint_full_name">Full Name*</string>
    <string name="hint_name">Name*</string>
    <string name="hint_phone_number">Phone Number*</string>
    <string name="hint_date_of_birth">Date of Birth*</string>
    <string name="hint_role">Role*</string>
    <string name="hint_gender">Gender*</string>
    <string name="hint_race">Race*</string>
    <string name="hint_nationality">Nationality*</string>
    <string name="hint_position">Position</string>
    <string name="hint_organisation">Organisation</string>
    <string name="hint_location">Location</string>
    <string name="hint_schedule">Schedule</string>
    <string name="hint_employment_type">Employment Type</string>
    <string name="hint_part_time">Part Time</string>
    <string name="hint_salary_part_time">Salary per hour</string>
    <string name="hint_full_time">Full Time</string>
    <string name="hint_salary_full_time">Salary per month</string>
    <string name="hint_responsibilities">Responsibilities</string>
    <string name="hint_description">Description</string>

    <string name="hint_address">Address</string>

    <!-- Search hints -->
    <string name="hint_search_market">Search in the market</string>
    <string name="hint_search_jobs">Search for jobs</string>

    <!-- Button-->
    <string name="btn_text_update">Update</string>
    <string name="btn_text_create">Create</string>
    <string name="btn_text_delete">Delete</string>
    <string name="btn_text_apply">Apply</string>
    <string name="btn_text_verify">Verify</string>
    <string name="btn_text_confirm">Confirm</string>
    <string name="btn_text_view">View</string>
    <string name="btn_text_apply_now">Apply now</string>
    <string name="btn_text_manage">Manage</string>
    <string name="btn_text_manage_agents">Manage Agents</string>
    <string name="btn_text_accept">Accept</string>
    <string name="btn_text_reject">Reject</string>
    <string name="btn_text_find_user">Find user</string>

    <!-- Filters -->
    <string name="filter_job_type">Job Type</string>
    <string name="filter_salary_range">Salary Range</string>
    <string name="filter_min_salary">Min Salary</string>

    <!-- Login Activity -->
    <string name="login_activity_header">Login</string>
    <string name="login_activity_redirect_prompt">Don\'t have an account?</string>
    <string name="login_activity_redirect"><u>Register here</u></string>
    <string name="login_activity_forgot_password">Forgot password</string>

    <!-- Register Activity -->
    <string name="register_activity_header">Sign Up</string>
    <string name="register_activity_redirect_prompt">Already have an account?</string>
    <string name="register_activity_redirect"><u>Login here</u></string>

    <!-- Verify User Fragment -->
    <string name="verify_user_fragment_header">Verify your account</string>
    <string name="verify_user_fragment_sub_header">We\'ve sent a 6-digit OTP to your registered email address.</string>
    <string name="verify_user_fragment_resend"><u>Resend OTP</u></string>

    <!-- Forgot Password Fragment -->
    <string name="forgot_password_fragment_header">Recover your account</string>
    <string name="forgot_password_fragment_sub_header">We will send you an OTP to verify your email address.</string>

    <!-- New Password Fragment -->
    <string name="new_password_fragment_header">Set a new password</string>
    <string name="new_password_fragment_sub_header">You are one step away from regaining access.</string>

    <!-- Change Password Fragment -->
    <string name="change_password_fragment_header">Change your password</string>
    <string name="change_password_fragment_sub_header">Update your password to keep your account secure.</string>

    <!-- Job Seeker Home Fragment -->
    <string name="home_job_seeker_fragment_header">Singapore\'s #1 job platform</string>
    <string name="home_job_seeker_fragment_sub_header">Recommended for you</string>

    <!-- Profile Fragment -->
    <string name="profile_fragment_header_card">Profile Information</string>
    <string name="agency_profile_fragment_header_card">Agency Information</string>

    <!-- Manage Agency Fragment -->
    <string name="manage_agency_manager_fragment_header_card">Agency Manager</string>

    <!-- Create Agency Application Fragment -->
    <string name="create_agency_application_fragment_header">Join SgJobMarket!</string>
    <string name="create_agency_application_fragment_description">Are you interested in connecting talented job seekers with the right opportunities? Complete the form below to register your agency and start using our platform!</string>

    <!-- Add Agent Fragment -->
    <string name="add_agent_fragment_header">Add an agent</string>
    <string name="add_agent_fragment_description">Enter the email of an existing user to promote their role to an Agent</string>

    <!-- Placeholders -->
    <string name="placeholder_empty_state_header">Oops\nNo resource found</string>
    <string name="placeholder_agency_application_submitted_header">Oops\nYou have already submitted an application</string>
    <!--TODO: Remove later-->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
</resources>