<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_admin_item_1"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/bottom_nav_admin_item_2"
        android:enabled="true"
        android:icon="@drawable/ic_agency"
        android:title="@string/nav_agencies"/>
    <item
        android:id="@+id/bottom_nav_admin_item_3"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/nav_users"/>
    <item
        android:id="@+id/bottom_nav_admin_item_4"
        android:enabled="true"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/nav_profile"/>
</menu>