<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragments.auth.ForgotPasswordFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/foreground"
            app:theme="@style/ToolbarThemeLight"
            app:title="@string/title_menu_forgot_password"
            android:background="@color/background"
            app:titleCentered="true"
            app:titleTextAppearance="@style/AppBarTitleTextAppearance"
            app:titleTextColor="@color/foreground" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:src="@drawable/recover_account_icon" />

    <TextView
        style="@style/Text.FormHeader"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password_fragment_header" />

    <TextView
        style="@style/Text.FormDescription"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password_fragment_sub_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailLayout"
            style="@style/EditTextLayout"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/EditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btnVerifyEmail"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/btn_text_verify"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>