<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragments.auth.NewPasswordFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ToolbarThemeLight"
            app:title="@string/title_menu_reset_password"
            app:titleCentered="true"
            app:titleTextAppearance="@style/AppBarTitleTextAppearance"
            app:titleTextColor="@color/foreground" />

    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:src="@drawable/new_password_icon" />

    <TextView
        style="@style/Text.FormHeader"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/new_password_fragment_header" />

    <TextView
        style="@style/Text.FormDescription"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/new_password_fragment_sub_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            style="@style/EditTextLayout"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true"
            app:helperTextEnabled="true"
            app:helperText="This will be your new password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/EditText"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btnConfirmNewPassword"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/btn_text_confirm"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>