<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llOnboarding1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragments.OnboardingFragment1">

    <ImageView
        android:id="@+id/iVOnboardingIcon1"
        android:layout_width="314dp"
        android:layout_height="285dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/onboarding_icon_1" />

    <TextView
        android:id="@+id/tvOnboardingHeader1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/onboarding_fragment_header_1"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvOnboardingDesc1"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/onboarding_fragment_description_1"
        android:textAlignment="center"
        android:textColor="@color/placeholder_foreground" />

    <Button
        android:id="@+id/btnOnboardingNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="100dp"
        android:text="@string/onboarding_fragment_next"
        android:textColor="@color/background"
        android:background="@drawable/button"
        android:textSize="26sp" />
</LinearLayout>